# z80emu

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  conanfile.py  imgui.ini  test.asm
.github/profiles/: linux_release
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  main.cpp
src/debug/: CMakeLists.txt  debug_card.cpp  debug_card.hpp
src/machine/: CMakeLists.txt  component.cpp  component.hpp  control_bus.hpp  cpu.cpp  cpu.hpp  debug_card.cpp  debug_card.hpp  machine.cpp  machine.hpp  machine_component.hpp  mb_component.cpp  mb_component.hpp  memory.cpp  memory.hpp  mother_board.cpp  mother_board.hpp  registers.cpp  registers.hpp
src/machine/cpu/: CMakeLists.txt  cpu.cpp  cpu.hpp  instruction_executor.hpp  operation.hpp  registers.cpp  registers.hpp  z80_executor.cpp  z80_executor.hpp  z80_instruction_executor.cpp  z80_instruction_executor.hpp
src/utils/: bit_operations.hpp  circular_queue.hpp  constants.hpp
test_programs/: CMakeLists.txt  Makefile  ld_immediate.asm  ld_register_addressing.asm  non_maskable_interruptions.asm
test_programs_src/: Makefile  ld_test.asm  simple_add.asm
tests/: CMakeLists.txt  load_operations_tests.cpp  machine_utils.cpp  machine_utils.hpp
